# clinic-appointments

./: .env.example  .flake8  Dockerfile  Makefile  README.md  alembic.ini  answers  bot_scenario.md  diagram  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 70ab0924383d_initial_tables.py
tests/: test_api.py  test_models.py
