[tool.poetry]
name = "clinic-appointments"
version = "0.1.0"
description = "Microservice for clinic appointments management"
authors = ["Oleg <olega_djan@mail.ru>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
pydantic = "^2.11.7"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
alembic = "^1.16.2"
