[tool.poetry]
package-mode = false



[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
pydantic = "^2.11.7"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
alembic = "^1.16.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"

[tool.isort]
skip = ["migrations"]

[tool.flake8]
exclude = ["migrations"]